--- a/stylesheet.css
+++ b/stylesheet.css
@@ -321,3 +321,30 @@ hr {
 .seeproject:enabled {
   background-color: #7d73fc;
 }
+
+.contact-section,
+.foota {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  height: auto;
+}
+
+.contact {
+  color: #9390ff;
+  font-size: 32px;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.text-invite {
+  width: 327px;
+  height: 105px;
+  font-size: 17px;
+  font-weight: 400;
+  color: #f5f5ff;
+  line-height: 24px;
+  text-align: center;
+  margin-bottom: 15px;
+}
